tests/fixtures/invalid/pow_list_bytes.py
# Cannot call pow() with List[int], Bytes
x = pow([1, 2, 3], b"hello")
